# ASO-description-bot

./: .gitignore  README.md  backend.env.example  bot.env.example  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
app/server/: app.py  database.py
app/server/core/: config.py
app/server/models/: __init__.py  application.py  user.py
app/server/routes/: application.py  openai_generate.py  user.py
app/server/schemas/: __init__.py  application.py  completion.py  user.py
bot/: Dockerfile  cbdata.py  configreader.py  main.py  pyproject.toml  utils.py
bot/handlers/: comand.py  create_application.py  generate.py  menu.py
bot/keyboards/default/: menu.py
bot/keyboards/inline/: application.py  generate.py
bot/middlewares/: gpt.py
bot/states/: create_application.py  edit_application.py
