[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nazar <nazik110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
beanie = "^1.16.8"
uvicorn = "^0.20.0"
openai = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
